Fixed focus visibility

--- a/_sass/components/_projects--dark.scss
+++ b/_sass/components/_projects--dark.scss
@@ -18,3 +18,9 @@
 		color: $color--white;
 	}
 }
+
+.user-is-tabbing {
+    .project-link {
+        outline-color: $color--white;
+    }
+}
