--- a/_sass/components/_projects.scss
+++ b/_sass/components/_projects.scss
@@ -15,13 +15,23 @@
 		// border: 10px solid $color--white;
 		transition: 0.3s ease;
 
-		@include hover-focus {
+        @mixin inner {
 			box-shadow: none;
 			.project-overlay {
-				// @include box-shadow-faint-inset;
 				opacity: 1;
-			}
+            }
+            .project-link {
+                pointer-events: auto;
+            }
+        }
+
+		@include hover-focus {
+            @include inner;
 		}
+
+		&:focus-within {
+            @include inner;
+        }
 	}
 
 	&-image {
@@ -31,12 +41,12 @@
 		transition: 0.3s;
 
 		> img {
-            transition: 0.3s;
-            // position: absolute;
-            // top: 50%;
-            // left: 0;
-            // right: 0;
-            // transform: translateY(-50%);
+			transition: 0.3s;
+			// position: absolute;
+			// top: 50%;
+			// left: 0;
+			// right: 0;
+			// transform: translateY(-50%);
 		}
 	}
 
@@ -72,37 +82,38 @@
 		}
 	}
 
-    &-link {
-        text-decoration: underline;
-        font-weight: 700;
+	&-link {
+        pointer-events: none;
+		text-decoration: underline;
+		font-weight: 700;
         color: $color--blue-safe;
 
-        @include hover {
-            color: $color--blue;
-        }
-    }
+		@include hover {
+			color: $color--blue;
+		}
+	}
 
 	&-desc {
 		font-weight: 600;
 		margin-top: -0.5em;
-    }
+	}
 
-    &-client {
-        // position: absolute;
-        // top: 25px;
-        // left: 25px;
-        color: $color--blue-safe;
-        font-size: 14px;
-        opacity: 0.5;
+	&-client {
+		// position: absolute;
+		// top: 25px;
+		// left: 25px;
+		color: $color--blue-safe;
+		font-size: 14px;
+		opacity: 0.5;
 		margin-top: -0.5em;
-        display: inline-block;
-        font-weight: 700;
-    }
+		display: inline-block;
+		font-weight: 700;
+	}
 
 	&-desc {
 		font-weight: 600;
 		margin: 1em 0;
-    }
+	}
 
 	&-roles {
 	}
@@ -110,7 +121,7 @@
 	&-role-list {
 		justify-content: flex-start;
 		align-items: flex-start;
-        padding: 1.5em;
+		padding: 1.5em;
 
 		margin-top: $section-gap-small;
 		@include media-breakpoint-up($bp-tablet) {
@@ -136,7 +147,6 @@
 	}
 
 	&-content {
-
 		p {
 			margin-top: 0;
 
